--- a/pages/about.html
+++ b/pages/about.html
@@ -2,12 +2,56 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/css/styles.css" />
-  <title>Your title here</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/styles.css" />
+  <title>Potz Photography</title>
 </head>
 
 <body>
-  <h1>About</h1>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Potz</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="..\index.html">Home</a>
+        <a class="nav-item nav-link active" href="about.html">About Nathaniel<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href="reviews.html">Reviews</a>
+      </div>
+    </div>
+  </nav>
+
+  <h1>About the photographer</h1>
+  <hr>
+  <p>Nathaniel Potz has been an innovator in the photography industry<br>
+  for years. His flawless technique  separates him from the rest of his<br>
+  peers. A shoot with Nathaniel isn't just a shoot, it is indeed <br>
+  the ultimate photographic experiences.</p>
+
+  <section class="portfolio">
+    <div class="image">
+      <img src="/../images/Nathaniel.jpg" />
+    </div>
+    <div class="image">
+      <img src="/../images/MainHorse.jpg" />
+    </div>
+    <div class="image">
+      <img src="/../images/IMG_2133.jpg" />
+    </div>
+
+
+
+    <footer>
+      <p>Github Repository<br>
+      <a href="https://github.com/BYUCS260/lab-1-photography-website-joeparis6">https://github.com/BYUCS260/lab-1-photography-website-joeparis6</a></p>
+    </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
