--- a/index.html
+++ b/index.html
@@ -2,12 +2,53 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/css/styles.css" />
-  <title>Your title here</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel='stylesheet' href='/css/styles.css' />
+  <title>Potz Photography</title>
+
 </head>
 
 <body>
-  <h1>Home Page</h1>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Potz</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="pages\about.html">About Nathaniel</a>
+        <a class="nav-item nav-link" href="pages\portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href="pages\reviews.html">Reviews</a>
+      </div>
+    </div>
+  </nav>
+
+  <h1>Potz Photography</h1>
+  <hr>
+
+  <h2>Nathaniel Potz is the world's foremost horse photographer</h2>
+
+  <p>I've often said there is nothing better for the inside of the man, than the outside of the horse.</p>
+  <p>- Ronald Reagan</p>
+
+
+
+  <p>Courage is being scared to death but saddling up anyway.</p>
+
+  <p>- John Wayne</p>
+
+  <footer>
+    <p>Github Repository<br>
+    <a href="https://github.com/BYUCS260/lab-1-photography-website-joeparis6">https://github.com/BYUCS260/lab-1-photography-website-joeparis6</a></p>
+  </footer>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
