--- a/isaiahpages/writings.html
+++ b/isaiahpages/writings.html
@@ -3,50 +3,36 @@
 
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/styles.css" />
-  <title>Potz Photography</title>
+  <link rel="stylesheet" href="../css/isaiahstyles.css" />
+  <title>The Book of Isaiah</title>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Potz</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+    <a class="navbar-brand" href="#">Isaiah</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="..\index.html">Home</a>
-        <a class="nav-item nav-link" href="about.html">About Nathaniel</a>
-        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link active" href="portfolio.html">Reviews<span class="sr-only">(current)</span></a>
-
+        <a class="nav-item nav-link" href="aboutisaiah.html">About Isaiah</a>
+        <a class="nav-item nav-link active" href="writings.html">Writings<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="history.html">History</a>
       </div>
     </div>
   </nav>
 
-  <h1>Reviews</h1>
+  <h1>Here are some of my favorite chapters!</h1>
   <hr>
-  <br>
-  <br>
-  <p>He's a great photographer! I'd recommend him for any project! - Peter P
-  <br>
-  <br>
-  I was so happy with the way my wedding pictures turned out. Thanks Nathaniel! - Harry O
-  <br>
-  <br>
-  5 star work! We always go to Nathaniel to capture our special moments. - Mary-Jane W
-  <br>
-  <br>
-  There's no photographer that I trust more! - Eddie B
-  <br>
-  <br>
-  A true artist. - May P</p>
 
-  <footer>
-    <p>Github Repository<br>
-    <a href="https://github.com/BYUCS260/lab-1-photography-website-joeparis6">https://github.com/BYUCS260/lab-1-photography-website-joeparis6</a></p>
-  </footer>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/7?lang=eng">Isaiah 7</a></p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/11?lang=eng">Isaiah 11</a></p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/12?lang=eng">Isaiah 12</a></p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/29?lang=eng">Isaiah 29</a></p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/53?lang=eng">Isaiah 53</a></p>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
