--- a/isaiahpages/aboutisaiah.html
+++ b/isaiahpages/aboutisaiah.html
@@ -3,10 +3,8 @@
 
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- <link rel='stylesheet' href='/css/styles.css' /> -->
-  <link rel="stylesheet" href="/css/isaiahstyles.css">
+  <link rel="stylesheet" href="../css/isaiahstyles.css" />
   <title>The Book of Isaiah</title>
-
 </head>
 
 <body>
@@ -18,29 +16,29 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/isaiahpages/aboutisaiah.html">About Isaiah</a>
-        <a class="nav-item nav-link" href="/isaiahpages/history.html">Writings</a>
-        <a class="nav-item nav-link" href="/isaiahpages/writings.html">History</a>
+        <a class="nav-item nav-link" href="..\index.html">Home</a>
+        <a class="nav-item nav-link active" href="aboutisaiah.html">About Isaiah<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="writings.html">Writings</a>
+        <a class="nav-item nav-link" href="history.html">History</a>
       </div>
     </div>
   </nav>
 
-  <h1>The Prophet Isaiah</h1>
+  <h1>About the prophet Isaiah</h1>
   <hr>
+  <p>Isaiah was a prophet in the ancient Kingdom of Judah. He is known<br>
+  for his brilliant use of the hebrew language and his poetic prophecies<br>
+  that transcend different time periods with relevancy in both ancient <br>
+  and modern contexts.</p>
 
-  <h2>The great prophet of the Old Testament</h2>
-
-  <p>"Great are the words of Isaiah"</p>
-  <p>- Jesus</p>
-
-  <img src="/images/isaiah.jpg" alt="Isaiah">
+  <img src="../images/isaiah2.jpg" alt="Isaiah">
 
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
