--- a/isaiahpages/history.html
+++ b/isaiahpages/history.html
@@ -3,51 +3,33 @@
 
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/styles.css" />
-  <title>Potz Photography</title>
+  <link rel="stylesheet" href="../css/isaiahstyles.css" />
+  <title>The Book of Isaiah</title>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Potz</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+    <a class="navbar-brand" href="#">Isaiah</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="..\index.html">Home</a>
-        <a class="nav-item nav-link active" href="about.html">About Nathaniel<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="reviews.html">Reviews</a>
+        <a class="nav-item nav-link" href="aboutisaiah.html">About Isaiah</a>
+        <a class="nav-item nav-link" href="writings.html">Writings</a>
+        <a class="nav-item nav-link active" href="history.html">History<span class="sr-only">(current)</span></a>
+
       </div>
     </div>
   </nav>
 
-  <h1>About the photographer</h1>
+  <h1>Some history about Isaiah</h1>
   <hr>
-  <p>Nathaniel Potz has been an innovator in the photography industry<br>
-  for years. His flawless technique  separates him from the rest of his<br>
-  peers. A shoot with Nathaniel isn't just a shoot, it is indeed <br>
-  the ultimate photographic experiences.</p>
 
-  <section class="portfolio">
-    <div class="image">
-      <img src="/../images/Nathaniel.jpg" />
-    </div>
-    <div class="image">
-      <img src="/../images/MainHorse.jpg" />
-    </div>
-    <div class="image">
-      <img src="/../images/IMG_2133.jpg" />
-    </div>
+  <img src="../images/isaiah3.jpg" alt="Isaiah">
 
-
-
-    <footer>
-      <p>Github Repository<br>
-      <a href="https://github.com/BYUCS260/lab-1-photography-website-joeparis6">https://github.com/BYUCS260/lab-1-photography-website-joeparis6</a></p>
-    </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
