--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- <link rel='stylesheet' href='/css/styles.css' /> -->
-  <link rel="stylesheet" href="/css/isaiahstyles.css">
+  <link rel="stylesheet" href="css/isaiahstyles.css">
   <title>The Book of Isaiah</title>
 
 </head>
@@ -19,9 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/isaiahpages/aboutisaiah.html">About Isaiah</a>
-        <a class="nav-item nav-link" href="/isaiahpages/history.html">Writings</a>
-        <a class="nav-item nav-link" href="/isaiahpages/writings.html">History</a>
+        <a class="nav-item nav-link" href="isaiahpages/aboutisaiah.html">About Isaiah</a>
+        <a class="nav-item nav-link" href="isaiahpages/writings.html">Writings</a>
+        <a class="nav-item nav-link" href="isaiahpages/history.html">History</a>
+        <a class="nav-item nav-link" href="isaiahpages/testimony.html">My Testimony</a>
       </div>
     </div>
   </nav>
@@ -34,7 +35,7 @@
   <p>"Great are the words of Isaiah"</p>
   <p>- Jesus</p>
 
-  <img src="/images/isaiah.jpg" alt="Isaiah">
+  <img src="images/isaiah.jpg" alt="Isaiah">
 
 
 
