--- a/isaiahpages/aboutisaiah.html
+++ b/isaiahpages/aboutisaiah.html
@@ -20,6 +20,7 @@
         <a class="nav-item nav-link active" href="aboutisaiah.html">About Isaiah<span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="writings.html">Writings</a>
         <a class="nav-item nav-link" href="history.html">History</a>
+        <a class="nav-item nav-link" href="testimony.html">My Testimony</a>
       </div>
     </div>
   </nav>
