--- a/isaiahpages/history.html
+++ b/isaiahpages/history.html
@@ -20,7 +20,7 @@
         <a class="nav-item nav-link" href="aboutisaiah.html">About Isaiah</a>
         <a class="nav-item nav-link" href="writings.html">Writings</a>
         <a class="nav-item nav-link active" href="history.html">History<span class="sr-only">(current)</span></a>
-
+        <a class="nav-item nav-link" href="testimony.html">My Testimony</a>
       </div>
     </div>
   </nav>
@@ -29,6 +29,12 @@
   <hr>
 
   <img src="../images/isaiah3.jpg" alt="Isaiah">
+
+  <p>Isaiah served as a prophet of the Lord around the time of 740 BC. His ministry<br>
+  overlapped with the reign of 4 different kings of Judah. He is especially known for seeing<br>
+  a vison of God on his throne and helping King Ahaz navigate conflict with the kingdoms<br>
+  of Syria and Northern Israel. Many of his prophecies about ensuing conflicts also<br>
+  are interpreted as references to the birth Christ and his atoning sacrifice. </p>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
