--- a/isaiahpages/writings.html
+++ b/isaiahpages/writings.html
@@ -18,8 +18,10 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="..\index.html">Home</a>
         <a class="nav-item nav-link" href="aboutisaiah.html">About Isaiah</a>
-        <a class="nav-item nav-link active" href="writings.html">Writings<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="history.html">History</a>
+        <a class="nav-item nav-link active" href="writings.html">Writings</a>
+        <a class="nav-item nav-link" href="history.html">History<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="testimony.html">My Testimony</a>
+
       </div>
     </div>
   </nav>
@@ -27,11 +29,16 @@
   <h1>Here are some of my favorite chapters!</h1>
   <hr>
 
-  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/7?lang=eng">Isaiah 7</a></p>
-  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/11?lang=eng">Isaiah 11</a></p>
-  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/12?lang=eng">Isaiah 12</a></p>
-  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/29?lang=eng">Isaiah 29</a></p>
-  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/53?lang=eng">Isaiah 53</a></p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/7?lang=eng">Isaiah 7</a>
+  "The Lord commands Israel not to fear and be still."</p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/11?lang=eng">Isaiah 11</a>
+  "The knowledge of the Lord will cover the land."</p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/12?lang=eng">Isaiah 12</a>
+  "The Lord will will dwell in Zion amid praise."</p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/29?lang=eng">Isaiah 29</a>
+  "Prophets will speak from the dust, but some will not hear."</p>
+  <p><a href="https://www.churchofjesuschrist.org/study/scriptures/ot/isa/53?lang=eng">Isaiah 53</a>
+  "The Messiah will suffer for our iniquities and we will be redeemed."</p>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
